# syclgameoflife

./: CMakeLists.txt  LICENSE.txt  README.md
src/: main.cpp
